--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ci-check:tests": "run-p -s 'ci-check:test:*'",
     "ci-check:test:c4p": "yarn test:c4p --ci",
     "ci-check:test:community": "yarn test:community --ci",
+    "ci-check:spellcheck": "yarn spellcheck",
     "clean": "run-p -s 'clean:*' && run-p -s 'clean:finally:*'",
     "clean:cache": "yarn cache clean",
     "clean:finally:files": "rimraf coverage node_modules results",
