--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -69,6 +69,7 @@
     "sass-loader": "^14.0.0",
     "storybook": "^7.6.10",
     "style-loader": "^3.3.4",
+    "terser-webpack-plugin": "^5.3.10",
     "typescript": "^5.3.3",
     "webpack": "^5.90.0",
     "webpack-merge": "^5.10.0"
