--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ci-check:tests": "run-p -s 'ci-check:test:*'",
     "ci-check:test:c4p": "yarn test:c4p --ci",
     "ci-check:test:community": "yarn test:community --ci",
+    "ci-check:spellcheck": "yarn spellcheck",
     "clean": "run-p -s 'clean:*' && run-p -s 'clean:finally:*'",
     "clean:cache": "yarn cache clean",
     "clean:finally:files": "rimraf coverage node_modules results",
@@ -195,7 +196,7 @@
     "!(examples/**/*)**/*.{js,jsx,ts,tsx}": [
       "npx prettier --cache --write",
       "npx eslint --fix",
-      "npx cspell"
+      "npx cspell --no-must-find-files"
     ],
     "**/*.scss": [
       "npx prettier --cache --write",
@@ -203,7 +204,7 @@
     ],
     "!(examples/**/*).md": [
       "npx prettier --cache --write",
-      "npx cspell"
+      "npx cspell --no-must-find-files"
     ]
   },
   "dependencies": {
