--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 # Netlify build and deploy settings - https://docs.netlify.com/configure-builds/file-based-configuration/#sample-file
 [build]
 ignore = "sh ./scripts/ignore_dependabot.sh"
-command = "CI= yarn storybook:build"
+command = "CI='' yarn storybook:build"
 publish = "packages/core/storybook-static"
 
 [build.environment]
