--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -58,6 +58,7 @@
     "babel-preset-ibm-cloud-cognitive": "^0.14.40",
     "css-loader": "^6.9.1",
     "dotenv-webpack": "8.0.1",
+    "fast-glob": "^3.2.7",
     "npm-check-updates": "^16.14.12",
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.8.1",
