--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -65,6 +65,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "regenerator-runtime": "^0.14.1",
+    "remark-gfm": "^4.0.0",
     "rimraf": "^5.0.5",
     "sass": "^1.70.0",
     "sass-loader": "^14.0.0",
