--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ci-check:lint": "run-p -s audit lint",
     "ci-check:tests": "run-p -s 'ci-check:test:*'",
     "ci-check:test:c4p": "yarn test:c4p --ci",
+    "ci-check:test:c4p:snapshot": "yarn test:c4p:snapshot --ci",
     "ci-check:test:community": "yarn test:community --ci",
     "ci-check:spellcheck": "yarn spellcheck",
     "clean": "run-p -s 'clean:*' && run-p -s 'clean:finally:*'",
