--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,7 +40,7 @@
     "@storybook/addon-docs": "^7.6.10",
     "@storybook/addon-essentials": "^7.6.10",
     "@storybook/addon-links": "^7.6.10",
-    "@storybook/addon-mdx-gfm": "^8.0.9",
+    "@storybook/addon-mdx-gfm": "7.6.10",
     "@storybook/addon-storysource": "^7.6.10",
     "@storybook/addon-viewport": "^7.6.10",
     "@storybook/addons": "^7.6.10",
