--- a/.github/ISSUE_TEMPLATE/feature-request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yaml
@@ -1,7 +1,7 @@
 name: Feature request or enhancement 💡
 description: Suggest a new component/pattern/idea for this project.
 title: '[Feature Request]: '
-labels: 'type: enhancement 💡'
+labels: ['type: enhancement 💡', 'status: needs triage 🕵️‍♀️']
 body:
   - type: markdown
     attributes:
