feat: upgrade to storybook 8

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,24 +35,21 @@
     "@carbon/react": "^1.55.0",
     "@carbon/themes": "^11.34.0",
     "@carbon/type": "^11.26.0",
-    "@storybook/addon-actions": "^7.6.10",
-    "@storybook/addon-controls": "^7.6.10",
-    "@storybook/addon-docs": "^7.6.10",
-    "@storybook/addon-essentials": "^7.6.10",
-    "@storybook/addon-links": "^7.6.10",
-    "@storybook/addon-mdx-gfm": "7.6.10",
-    "@storybook/addon-storysource": "^7.6.10",
-    "@storybook/addon-viewport": "^7.6.10",
-    "@storybook/addons": "^7.6.10",
-    "@storybook/api": "^7.6.10",
-    "@storybook/builder-vite": "^7",
-    "@storybook/components": "^7.6.10",
-    "@storybook/core-events": "^7.6.10",
-    "@storybook/csf": "^0.1.2",
-    "@storybook/react": "^7.6.10",
-    "@storybook/react-vite": "^7",
-    "@storybook/source-loader": "^7.6.10",
-    "@storybook/theming": "^7.6.10",
+    "@storybook/addon-actions": "^8.0.9",
+    "@storybook/addon-controls": "^8.0.9",
+    "@storybook/addon-docs": "^8.0.9",
+    "@storybook/addon-essentials": "^8.0.9",
+    "@storybook/addon-links": "^8.0.9",
+    "@storybook/addon-storysource": "^8.0.9",
+    "@storybook/addon-viewport": "^8.0.9",
+    "@storybook/components": "^8.0.9",
+    "@storybook/core-events": "^8.0.9",
+    "@storybook/csf": "^0.1.5",
+    "@storybook/manager-api": "^8.0.9",
+    "@storybook/react": "^8.0.9",
+    "@storybook/react-vite": "^8.0.9",
+    "@storybook/source-loader": "^8.0.9",
+    "@storybook/theming": "^8.0.9",
     "fast-glob": "^3.2.7",
     "npm-check-updates": "^16.14.12",
     "npm-run-all": "^4.1.5",
@@ -63,7 +60,7 @@
     "remark-gfm": "^4.0.0",
     "rimraf": "^5.0.5",
     "sass": "^1.70.0",
-    "storybook": "^7.6.10",
+    "storybook": "^8.0.9",
     "typescript": "^5.3.3",
     "vite": "^5.2.10"
   },
