--- a/.github/workflows/triage-labeled-issues.yml
+++ b/.github/workflows/triage-labeled-issues.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   move-ts-issues:
     if: ${{contains(github.event.label.name, format('area{0} typescript', ':'))}}
-    uses: ./.github/workflows/move-issue-to-project-and-set-fields.yml
+    uses: carbon-design-system/.github/.github/workflows/move-issue-to-project-and-set-fields.yml@main
     with:
       field: 'Area'
       field_option: '🟦 Typescript'
@@ -15,7 +15,7 @@ jobs:
     secrets: inherit
   move-migration-issues:
     if: ${{contains(github.event.label.name, format('area{0} migration ➡️', ':'))}}
-    uses: ./.github/workflows/move-issue-to-project-and-set-fields.yml
+    uses: carbon-design-system/.github/.github/workflows/move-issue-to-project-and-set-fields.yml@main
     with:
       field: 'Area'
       field_option: '🗺 Migration'
@@ -23,7 +23,7 @@ jobs:
     secrets: inherit
   move-a11y-issues:
     if: ${{contains(github.event.label.name, format('type{0} a11y ♿', ':'))}}
-    uses: ./.github/workflows/move-issue-to-project-and-set-fields.yml
+    uses: carbon-design-system/.github/.github/workflows/move-issue-to-project-and-set-fields.yml@main
     with:
       field: 'Area'
       field_option: '♿️ Accessibility'
