--- a/.github/workflows/update-v1.yml
+++ b/.github/workflows/update-v1.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: 'main_v1'
+          ref: 'v1'
 
       - name: Install
         run: yarn
