chore(telemetry): add @ibm/telemetry-js-config-generator package

--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -62,6 +62,7 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.21.5",
+    "@ibm/telemetry-js-config-generator": "^1.0.3",
     "@rollup/plugin-babel": "^6.0.0",
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
