--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,15 @@ jobs:
       - name: Continuous integration check (includes build)
         run: yarn ci-check
 
+      - name:
+          Run @ibm/telemetry-js-config-generator to regenerate telemetry config
+          file
+        run:
+          yarn ibmtelemetry-config --id 495342db-5046-4ecf-85ea-9ffceb6f8cdf
+          --endpoint
+          https://collector-prod.1am6wm210aow.us-south.codeengine.appdomain.cloud/v1/metrics
+          --files ./src/components/**/*.(tsx|js|jsx)
+
       # Dry run - `yarn lerna publish --dist-tag next --no-verify-access --create-release github --yes --no-push --no-git-tag-version`
       - name: Publish
         env:
