--- a/.github/workflows/triage-labeled-issues.yml
+++ b/.github/workflows/triage-labeled-issues.yml
@@ -7,25 +7,28 @@ on:
 jobs:
   move-ts-issues:
     if: ${{contains(github.event.label.name, format('area{0} typescript', ':'))}}
-    uses: ./.github/workflows/move-issue-to-project-and-set-fields.yml
+    uses: carbon-design-system/.github/.github/workflows/move-issue-to-project-and-set-fields.yml@main
     with:
       field: 'Area'
       field_option: '🟦 Typescript'
       project_number: '65'
-    secrets: inherit
+    secrets:
+      token: ${{ secrets.ADD_TO_PROJECT_SET_FIELD }}
   move-migration-issues:
     if: ${{contains(github.event.label.name, format('area{0} migration ➡️', ':'))}}
-    uses: ./.github/workflows/move-issue-to-project-and-set-fields.yml
+    uses: carbon-design-system/.github/.github/workflows/move-issue-to-project-and-set-fields.yml@main
     with:
       field: 'Area'
       field_option: '🗺 Migration'
       project_number: '65'
-    secrets: inherit
+    secrets:
+      token: ${{ secrets.ADD_TO_PROJECT_SET_FIELD }}
   move-a11y-issues:
     if: ${{contains(github.event.label.name, format('type{0} a11y ♿', ':'))}}
-    uses: ./.github/workflows/move-issue-to-project-and-set-fields.yml
+    uses: carbon-design-system/.github/.github/workflows/move-issue-to-project-and-set-fields.yml@main
     with:
       field: 'Area'
       field_option: '♿️ Accessibility'
       project_number: '65'
-    secrets: inherit
+    secrets:
+      token: ${{ secrets.ADD_TO_PROJECT_SET_FIELD }}
