--- a/packages/ibm-products/telemetry.yml
+++ b/packages/ibm-products/telemetry.yml
@@ -180,6 +180,7 @@ collect:
         - 'selectionAreas'
         - 'selectorPageContent'
         - 'selectorPrimaryFocus'
+        - 'selectorsFloatingMenus'
         - 'setActiveCellCoordinates'
         - 'setAllFilters'
         - 'setColumnsObject'
