chore(Checklist): release review changes

--- a/packages/ibm-products/telemetry.yml
+++ b/packages/ibm-products/telemetry.yml
@@ -397,8 +397,8 @@ collect:
         - chartValue
         - checklistAriaLabel
         - checklistToggleAriaLabel
+        - enableToggle
         - onClickViewAll
-        - showToggle
         - taskLists
         - toggleLabel
         - toggleLabelAlign
