--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "clean:packages": "yarn run-all --no-sort clean",
     "coverage": "echo 'you can pass a name argument to specify which tests are ran such as `yarn coverage decorator` and then view the results with `yarn coverage:report`'; yarn test:c4p --coverage",
     "coverage:report": "open ./packages/ibm-products/coverage/index.html",
-    "format": "prettier ./packages/**/*.{js,jsx,tsx,md,mdx,scss} --write --ignore-unknown",
+    "format:packages": "prettier ./packages/**/*.{js,jsx,tsx,md,mdx,scss} --write --ignore-unknown",
+    "format:e2e": "prettier ./e2e/**/*.js --write --ignore-unknown",
     "generate": "lerna run generate --loglevel success --scope \"@carbon/ibm-products\" --",
     "lint": "run-p -s 'lint:*'",
     "lint:js": "eslint packages --fix",
@@ -203,7 +204,7 @@
       "npx prettier --cache --write",
       "npx stylelint --allow-empty-input"
     ],
-    "!(examples/**/*).md": [
+    "!(examples/**/*).{md,mdx}": [
       "npx prettier --cache --write",
       "npx cspell --no-must-find-files"
     ]
