chore: add numerous AVT tests (#5150)
* chore: add avt tests

* fix: formatting

* fix: remove mdx formatting

* fix: md husky fix

--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "clean:packages": "yarn run-all --no-sort clean",
     "coverage": "echo 'you can pass a name argument to specify which tests are ran such as `yarn coverage decorator` and then view the results with `yarn coverage:report`'; yarn test:c4p --coverage",
     "coverage:report": "open ./packages/ibm-products/coverage/index.html",
-    "format": "prettier ./packages/**/*.{js,jsx,tsx,md,mdx,scss} --write --ignore-unknown",
+    "format": "run-p -s 'format:*'",
+    "format:packages": "prettier ./packages/**/*.{js,jsx,tsx,md,scss} --write --ignore-unknown",
+    "format:e2e": "prettier ./e2e/**/*.js --write --ignore-unknown",
     "generate": "lerna run generate --loglevel success --scope \"@carbon/ibm-products\" --",
     "lint": "run-p -s 'lint:*'",
     "lint:js": "eslint packages --fix",
