chore(a11y-template): add need triage status label
Add the triage status label to the a11y template

--- a/.github/ISSUE_TEMPLATE/accessibility-issue.yaml
+++ b/.github/ISSUE_TEMPLATE/accessibility-issue.yaml
@@ -1,7 +1,7 @@
 name: Accessibility Issue ♿
 description: Report an accessibility or usability issue.
 title: '[a11y]: '
-labels: 'type: a11y ♿'
+labels: ['type: a11y ♿', 'status: needs triage 🕵️‍♀️']
 body:
   - type: markdown
     attributes:
