--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -92,6 +92,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.23.9",
+    "@carbon/feature-flags": "^0.20.0",
     "@carbon/ibm-products-styles": "^2.36.0",
     "@carbon/telemetry": "^0.1.0",
     "@dnd-kit/core": "^6.0.8",
