--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "copyfiles": "^2.4.1",
     "cspell": "^8.3.2",
     "eslint": "^8.56.0",
-    "eslint-config-carbon": "^2.20.0",
+    "eslint-config-carbon": "^3.12.0",
     "husky": "^9.0.5",
     "jest": "^29.7.0",
     "jest-canvas-mock": "2.5.2",
@@ -99,7 +99,7 @@
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
     "stylelint": "^15.11.0",
-    "stylelint-config-ibm-products": "*",
+    "stylelint-config-carbon": "1.17.0",
     "webpack": "^5.90.0"
   },
   "//resolutions:http-signature": "package 'request' deprecated but still used, asks for http-signature ~1.2.0 which indirectly has vulnerabilities",
@@ -212,6 +212,15 @@
   },
   "dependencies": {
     "stylelint-plugin-carbon-tokens": "2.3.1"
+  },
+  "stylelint": {
+    "extends": [
+      "stylelint-config-carbon"
+    ],
+    "rules": {
+      "max-nesting-depth": null,
+      "scss/no-global-function-names": null
+    }
   },
   "packageManager": "yarn@4.0.2"
 }
