fix: add feature flags file as side effect

--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -17,7 +17,10 @@
   "sideEffects": [
     "**/global/js/utils/props-helper.js",
     "**/*.css",
-    "**/*.scss"
+    "**/*.scss",
+    "es/feature-flags.js",
+    "lib/feature-flags.js",
+    "src/feature-flags.js"
   ],
   "files": [
     "css",
