fix(get-started): add card to name

--- a/examples/carbon-for-ibm-products/GetStartedCard/gallery.config.json
+++ b/examples/carbon-for-ibm-products/GetStartedCard/gallery.config.json
@@ -1,9 +1,9 @@
 {
-  "label": "Get-Started",
+  "label": "Get-Started-Card",
   "package-config": {
     "flags": {
       "component": {
-        "GetStarted": true
+        "GetStartedCard": true
       }
     }
   },
