--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -1,25 +1,18 @@
-name: Release
+name: Release base
 run-name:
-  ${{ inputs.type }} - dry-run:${{ inputs.dry-run }} by @${{ github.actor }}
+  ${{ inputs.type }} - dry-run:${{ inputs.dry-run }}
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 on:
-  workflow_dispatch:
+  workflow_call:
     inputs:
       type:
         required: true
-        description: 'Specify the type of release'
-        type: choice
+        type: string
         default: first minor rc
-        options:
-          - full minor release
-          - first minor rc
-          - full patch release
-          - first patch rc
-          - subsequent rc
       dry-run:
         required: true
         description: 'Run dry run?'
@@ -62,32 +55,32 @@ jobs:
             echo "DRY_RUN=--yes" >> $GITHUB_ENV
           fi
 
-      - name: Publish full minor release (ie. v1.x.0)
-        if: github.event.inputs.type == 'full minor release'
-        run: |
-          echo "DRY RUN: ${{ env.DRY_RUN }}"
-          yarn lerna publish minor --conventional-graduate $(echo "${{ env.DRY_RUN }}")
+      # - name: Publish full minor release (ie. v1.x.0)
+      #   if: github.event.inputs.type == 'full minor release'
+      #   run: |
+      #     echo "DRY RUN: ${{ env.DRY_RUN }}"
+      #     yarn lerna publish minor --conventional-graduate $(echo "${{ env.DRY_RUN }}")
 
-      - name: Publish first minor RC (ie. v1.x.0-rc.0)
-        if: github.event.inputs.type == 'first minor rc'
-        run: |
-          echo "DRY RUN: ${{ env.DRY_RUN }}"
-          yarn lerna publish preminor --conventional-prerelease --preid rc --pre-dist-tag next $(echo "${{ env.DRY_RUN }}")
+      # - name: Publish first minor RC (ie. v1.x.0-rc.0)
+      #   if: github.event.inputs.type == 'first minor rc'
+      #   run: |
+      #     echo "DRY RUN: ${{ env.DRY_RUN }}"
+      #     yarn lerna publish preminor --conventional-prerelease --preid rc --pre-dist-tag next $(echo "${{ env.DRY_RUN }}")
 
-      - name: Publish full patch release (ie. v1.0.x)
-        if: github.event.inputs.type == 'full patch release'
-        run: |
-          echo "DRY RUN: ${{ env.DRY_RUN }}"
-          yarn lerna publish patch --conventional-graduate $(echo "${{ env.DRY_RUN }}")
+      # - name: Publish full patch release (ie. v1.0.x)
+      #   if: github.event.inputs.type == 'full patch release'
+      #   run: |
+      #     echo "DRY RUN: ${{ env.DRY_RUN }}"
+      #     yarn lerna publish patch --conventional-graduate $(echo "${{ env.DRY_RUN }}")
 
-      - name: Publish first patch RC (ie. v1.0.x-rc.0)
-        if: github.event.inputs.type == 'first patch rc'
-        run: |
-          echo "DRY RUN: ${{ env.DRY_RUN }}"
-          yarn lerna publish prepatch --conventional-prerelease --preid rc --pre-dist-tag next $(echo "${{ env.DRY_RUN }}")
+      # - name: Publish first patch RC (ie. v1.0.x-rc.0)
+      #   if: github.event.inputs.type == 'first patch rc'
+      #   run: |
+      #     echo "DRY RUN: ${{ env.DRY_RUN }}"
+      #     yarn lerna publish prepatch --conventional-prerelease --preid rc --pre-dist-tag next $(echo "${{ env.DRY_RUN }}")
 
-      - name: Publish subsequent RC (ie. v1.0.0-rc.x)
-        if: github.event.inputs.type == 'subsequent rc'
-        run: |
-          echo "DRY RUN: ${{ env.DRY_RUN }}"
-          yarn lerna publish --conventional-prerelease --preid rc --pre-dist-tag next $(echo "${{ env.DRY_RUN }}")
+      # - name: Publish subsequent RC (ie. v1.0.0-rc.x)
+      #   if: github.event.inputs.type == 'subsequent rc'
+      #   run: |
+      #     echo "DRY RUN: ${{ env.DRY_RUN }}"
+      #     yarn lerna publish --conventional-prerelease --preid rc --pre-dist-tag next $(echo "${{ env.DRY_RUN }}")
