--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -17,7 +17,10 @@
   "sideEffects": [
     "**/global/js/utils/props-helper.js",
     "**/*.css",
-    "**/*.scss"
+    "**/*.scss",
+    "es/feature-flags.js",
+    "lib/feature-flags.js",
+    "src/feature-flags.js"
   ],
   "files": [
     "css",
@@ -93,6 +96,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.23.9",
+    "@carbon/feature-flags": "^0.20.0",
     "@carbon/ibm-products-styles": "^2.38.0",
     "@carbon/telemetry": "^0.1.0",
     "@dnd-kit/core": "^6.0.8",
