--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -1,17 +1,32 @@
+# Deploy storybook environment from release branch to staging Github Pages
 name: Deploy staging (Deploy storybook environment to Github Pages)
 
+# on:
+#   workflow_run:
+#     workflows: [Release base]
+#     types: [completed]
+
 on:
-  workflow_run:
-    workflows: [Release base]
-    types: [completed]
+  repository_dispatch:
+    types: [deploy-storybook]
+
 concurrency:
   group: deploy-next-${{ github.ref }}
   cancel-in-progress: true
 
 
 jobs:
-  on-success:
+  deploy:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - run: echo 'The triggering workflow passed'
+      - name: Deploy production environment to Github Pages
+        if: ${{ github.event.client_payload.release-type  == 'full minor release' || github.event.client_payload.release-type  == 'full patch release' }}
+        run: |
+          echo 'The production env workflow passed'
+          echo '${{ github.event.client_payload.branch }}'
+      - name: Deploy staging environment to Github Pages
+        if: ${{ ! github.event.client_payload.release-type == 'full minor release' || ! github.event.client_payload.release-type  == 'full patch release' }}
+        run: |
+          echo 'The staging env workflow passed'
+          echo '${{ github.event.client_payload.branch }}'
