--- a/.github/workflows/release-base.yml
+++ b/.github/workflows/release-base.yml
@@ -84,3 +84,9 @@ jobs:
       #   run: |
       #     echo "DRY RUN: ${{ env.DRY_RUN }}"
       #     yarn lerna publish --conventional-prerelease --preid rc --pre-dist-tag next $(echo "${{ env.DRY_RUN }}")
+
+      - name: Dispatch staging/production storybook deployment workflow
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          event-type: deploy-storybook
+          client-payload: '{"release-type": "${{ github.event.inputs.type }}", "branch": "${{ github.ref_name }}"}'
