--- a/.github/workflows/deploy-latest.yml
+++ b/.github/workflows/deploy-latest.yml
@@ -33,6 +33,6 @@ jobs:
       - name: Deploy to latest
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          npx gh-pages -d packages/core/storybook-static -u "github-actions-bot <support+actions@github.com>" --dest latest --message "chore(gh-pages): deploy to latest"
+          npx gh-pages -d packages/core/storybook-static -u "github-actions-bot <support+actions@github.com>" --dest latest --message "chore(deploy): deploy to gh-pages latest"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
