--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -30,6 +30,6 @@ jobs:
       - name: Deploy
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          npx gh-pages -d packages/core/storybook-static -u "github-actions-bot <support+actions@github.com>" --dest staging --message "chore(gh-pages): deploy to staging"
+          npx gh-pages -d packages/core/storybook-static -u "github-actions-bot <support+actions@github.com>" --dest staging --message "chore(deploy): deploy to gh-pages staging"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
