fix: import feature flags to prevent them from being tree shaked away

--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -18,9 +18,7 @@
     "**/global/js/utils/props-helper.js",
     "**/*.css",
     "**/*.scss",
-    "es/feature-flags.js",
-    "lib/feature-flags.js",
-    "src/feature-flags.js"
+    "**/feature-flags.js"
   ],
   "files": [
     "css",
