--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,7 +32,7 @@
     "@carbon/ibm-products-styles": "^2.39.0",
     "@carbon/layout": "^11.21.0",
     "@carbon/motion": "^11.17.0",
-    "@carbon/react": "^1.55.0",
+    "@carbon/react": "1.55.0",
     "@carbon/themes": "^11.34.0",
     "@carbon/type": "^11.26.0",
     "@storybook/addon-actions": "^8.1.9",
