--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,6 +35,9 @@
     "@carbon/react": "^1.55.0",
     "@carbon/themes": "^11.34.0",
     "@carbon/type": "^11.26.0",
+    "@percy/cli": "^1.28.7",
+    "@percy/playwright": "^1.0.5",
+    "@percy/storybook": "^6.0.0",
     "@storybook/addon-actions": "^8.0.9",
     "@storybook/addon-controls": "^8.0.9",
     "@storybook/addon-docs": "^8.0.9",
