--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "upgrade:dependencies:examples": "npm-check-updates -u --dep dev,peer,prod --color --target minor --packageFile 'scripts/example-gallery-builder/update-example/**/package.json'",
     "upgrade:automatic": "run-s -s 'upgrade:dependencies:*'",
     "upgrade:carbon": "npm-check-updates -u --dep dev,peer,prod --packageFile '{package.json,{config/**,packages/**}/package.json}' --filter '/carbon/' --target minor",
-    "upgrade:manual": "sh ./scripts/monorepo-npm-upgrade.sh"
+    "upgrade:manual": "sh ./scripts/monorepo-npm-upgrade.sh",
+    "visual-snapshot": "cd packages/core && yarn percy storybook:start storybook-static"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
