chore(release): add telemetry and no verify access

--- a/.github/workflows/release-base.yml
+++ b/.github/workflows/release-base.yml
@@ -34,6 +34,8 @@ jobs:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 #v4.1.1
         with:
           fetch-depth: '0'
+          token: ${{ secrets.GH_TOKEN_LERNA }} # https://github.com/lerna/lerna/issues/1957
+
       # https://github.com/actions/checkout#push-a-commit-using-the-built-in-token
       - run: |
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
@@ -47,8 +49,30 @@ jobs:
           cache: 'yarn'
       - name: Install dependencies
         run: yarn install
+
+      - name: Run @ibm/telemetry-js-config-generator to regenerate telemetry config file
+        working-directory: ./packages/ibm-products
+        run: |
+          yarn telemetry-config
+
+      # This can be removed once @ibm/telemetry-js-config-generator has params to set the js scope
+      - name: Add js scope to telemetry config
+        working-directory: ./packages/ibm-products
+        run: |
+          echo "  js:
+              functions: {}
+              tokens: null" >> telemetry.yml
+          if [ -z "$(git status --porcelain)" ]; then
+            echo "Mirror is clean, exiting..."
+          else
+            git add telemetry.yml
+            git commit -m "chore(telemetry): update telemetry config"
+            git push origin
+          fi
+
       - name: Continuous integration check (includes build)
         run: yarn ci-check
+
       - name: Set NPM token
         run: |
           echo "//registry.npmjs.org/:_authToken=${{ secrets.CARBON_BOT_NPM_TOKEN }}" >> .npmrc
@@ -64,31 +88,31 @@ jobs:
         if: github.event.inputs.type == 'full minor release'
         run: |
           echo "DRY RUN: ${{ env.DRY_RUN }}"
-          yarn lerna publish minor --create-release github $(echo "${{ env.DRY_RUN }}")
+          yarn lerna publish minor --no-verify-access --create-release github $(echo "${{ env.DRY_RUN }}")
 
       - name: Publish first minor RC (ie. v1.x.0-rc.0)
         if: github.event.inputs.type == 'first minor rc'
         run: |
           echo "DRY RUN: ${{ env.DRY_RUN }}"
-          yarn lerna publish preminor --create-release github --preid rc --pre-dist-tag next $(echo "${{ env.DRY_RUN }}")
+          yarn lerna publish preminor --no-verify-access --create-release github --preid rc --pre-dist-tag next $(echo "${{ env.DRY_RUN }}")
 
       - name: Publish full patch release (ie. v1.0.x)
         if: github.event.inputs.type == 'full patch release'
         run: |
           echo "DRY RUN: ${{ env.DRY_RUN }}"
-          yarn lerna publish patch --create-release github $(echo "${{ env.DRY_RUN }}")
+          yarn lerna publish patch --no-verify-access --create-release github $(echo "${{ env.DRY_RUN }}")
 
       - name: Publish first patch RC (ie. v1.0.x-rc.0)
         if: github.event.inputs.type == 'first patch rc'
         run: |
           echo "DRY RUN: ${{ env.DRY_RUN }}"
-          yarn lerna publish prepatch --create-release github --preid rc --pre-dist-tag next $(echo "${{ env.DRY_RUN }}")
+          yarn lerna publish prepatch --no-verify-access --create-release github --preid rc --pre-dist-tag next $(echo "${{ env.DRY_RUN }}")
 
       - name: Publish subsequent RC (ie. v1.0.0-rc.x)
         if: github.event.inputs.type == 'subsequent rc'
         run: |
           echo "DRY RUN: ${{ env.DRY_RUN }}"
-          yarn lerna publish --create-release github --preid rc --pre-dist-tag next $(echo "${{ env.DRY_RUN }}")
+          yarn lerna publish --no-verify-access --create-release github --preid rc --pre-dist-tag next $(echo "${{ env.DRY_RUN }}")
 
       # After successfully publishing a full release, trigger the production storybook environment deployment workflow.
       # Pass in the release branch name to the storybook deployment job so it build off the release branch
