--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -180,9 +180,10 @@ jobs:
       - name: Build project
         run: yarn build
       - name: Run Percy Storybook
+        working-directory: packages/core
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN_IBM_PRODUCTS }}
-        run: yarn visual-snapshot
+        run: yarn percy storybook storybook-static
 
   vrt:
     if: ${{ always() }}
